Feat: Create database entities (Member, Class, Reservation) and Docker compose config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,34 @@
+# ==========================================
+# 1. BÖLÜM: VARSAYILAN (DEFAULT) PROF?L
+# Biz kod yazarken buras? çal??acak (H2 DB)
+# ==========================================
 spring.application.name=gym-service
+
+spring.datasource.url=jdbc:h2:mem:gymdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# H2 Konsolunu aç (http://localhost:8080/h2-console)
+spring.h2.console.enabled=true
+
+# Tablolar? otomatik olu?tur
+spring.jpa.hibernate.ddl-auto=update
+
+# SQL sorgular?n? göster
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+#---
+# ==========================================
+# 2. BÖLÜM: DOCKER PROF?L?
+# Docker ile çal???rken buras? devreye girecek
+# ==========================================
+spring.config.activate.on-profile=docker
+
+spring.datasource.url=jdbc:postgresql://db:5432/gymdb
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
