--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,20 @@
-# ==========================================
-# 1. BÖLÜM: VARSAYILAN (DEFAULT) PROF?L
-# Biz kod yazarken buras? çal??acak (H2 DB)
-# ==========================================
 spring.application.name=gym-service
 
+# --- H2 VER?TABANI AYARLARI (Lokal) ---
 spring.datasource.url=jdbc:h2:mem:gymdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# H2 Konsolunu aç (http://localhost:8080/h2-console)
+# --- H2 KONSOL AYARLARI ---
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+# Taray?c?da frame hatas? almamak için:
+spring.h2.console.settings.web-allow-others=true
 
-# Tablolar? otomatik olu?tur
+# --- JPA / HIBERNATE ---
+# Tablolar? Entity s?n?flar?na göre otomatik olu?tur
 spring.jpa.hibernate.ddl-auto=update
-
-# SQL sorgular?n? göster
+# SQL sorgular?n? loglarda göster (Opsiyonel)
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-#---
-# ==========================================
-# 2. BÖLÜM: DOCKER PROF?L?
-# Docker ile çal???rken buras? devreye girecek
-# ==========================================
-spring.config.activate.on-profile=docker
-
-spring.datasource.url=jdbc:postgresql://db:5432/gymdb
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
