Test: Achieve 87% instruction and 83% branch coverage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,17 @@
 spring.application.name=gym-service
 
-# --- H2 VER?TABANI AYARLARI (Lokal) ---
+# --- H2 Database Settings ---
 spring.datasource.url=jdbc:h2:mem:gymdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# --- H2 KONSOL AYARLARI ---
+# --- H2 Console ---
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-# Taray?c?da frame hatas? almamak için:
 spring.h2.console.settings.web-allow-others=true
 
-# --- JPA / HIBERNATE ---
-# Tablolar? Entity s?n?flar?na göre otomatik olu?tur
+# --- JPA / Hibernate ---
 spring.jpa.hibernate.ddl-auto=update
-# SQL sorgular?n? loglarda göster (Opsiyonel)
 spring.jpa.show-sql=true
