--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.h2.console.settings.web-allow-others=true
 # --- JPA / Hibernate ---
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+server.error.include-message=always
