Test: Maximize coverage to 91% Instruction and 100% Branch after mutation improvements

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,5 @@ spring.h2.console.settings.web-allow-others=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# --- Show Error Messages ---
 server.error.include-message=always
