--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,4 +1,4 @@
-# --- POSTGRESQL AYARLARI (Docker) ---
+# --- POSTGRESQL Settings (Docker) ---
 spring.datasource.url=jdbc:postgresql://db:5432/gymdb
 spring.datasource.username=postgres
 spring.datasource.password=postgres
