--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -49,8 +49,17 @@ jobs:
       # 7. UYGULAMAYI ARKA PLANDA BAŞLAT
       - name: Start Spring Boot App
         run: |
-          nohup java -jar target/*.jar > app.log 2>&1 &
-          echo "Uygulama başlatılıyor, 20 saniye bekleniyor..."
+          # Postgres yerine H2 kullanması için ayarları eziyoruz
+          nohup java \
+          -Dspring.datasource.url=jdbc:h2:mem:gymdb \
+          -Dspring.datasource.driverClassName=org.h2.Driver \
+          -Dspring.datasource.username=sa \
+          -Dspring.datasource.password=password \
+          -Dspring.jpa.database-platform=org.hibernate.dialect.H2Dialect \
+          -Dspring.jpa.hibernate.ddl-auto=create-drop \
+          -jar target/*.jar > app.log 2>&1 &
+          
+          echo "Uygulama H2 veritabanı ile başlatılıyor, 20 saniye bekleniyor..."
           sleep 20
 
       # 8. POSTMAN TESTLERİ (NEWMAN)
