--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build and Test with Maven
         run: mvn -B verify --file pom.xml
 
-      # --- JACOCO SUMMARY (PR Comment + Summary) ---
+      # --- JACOCO SUMMARY (PR Comment) ---
       - name: JaCoCo Report Summary (PR Comment)
         uses: Madrapps/jacoco-report@v1.6.1
         with:
@@ -40,56 +40,34 @@ jobs:
           title: "📊 JaCoCo Code Coverage Summary"
           update-comment: true
 
-      # JaCoCo Summary'e de ekle
+      # JaCoCo Summary'e de ekle (Sadece Instruction ve Branch Coverage)
       - name: Add JaCoCo to Step Summary
         run: |
           echo "### 📊 JaCoCo Code Coverage Summary" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           
-          # jacoco.xml'den coverage verilerini çek
-          JACOCO_XML="target/site/jacoco/jacoco.xml"
+          JACOCO_HTML="target/site/jacoco/index.html"
           
-          if [ -f "$JACOCO_XML" ]; then
-            # Instruction coverage (genel)
-            INSTRUCTION_COVERED=$(grep -o 'type="INSTRUCTION".*covered="[0-9]*"' "$JACOCO_XML" | grep -oP 'covered="\K[0-9]+' | head -1)
-            INSTRUCTION_MISSED=$(grep -o 'type="INSTRUCTION".*missed="[0-9]*"' "$JACOCO_XML" | grep -oP 'missed="\K[0-9]+' | head -1)
+          if [ -f "$JACOCO_HTML" ]; then
+            # Instruction coverage: "26 of 296" formatından parse
+            INST_LINE=$(grep -A1 '<tfoot>' "$JACOCO_HTML" | grep 'class="bar"' | head -1)
+            INST_MISSED=$(echo "$INST_LINE" | grep -oP '\d+(?= of )' || echo "0")
+            INST_TOTAL=$(echo "$INST_LINE" | grep -oP 'of \K\d+' || echo "1")
+            INST_COVERED=$((INST_TOTAL - INST_MISSED))
+            INST_PCT=$(awk "BEGIN {printf \"%.0f\", ($INST_COVERED/$INST_TOTAL)*100}")
           
-            # Branch coverage
-            BRANCH_COVERED=$(grep -o 'type="BRANCH".*covered="[0-9]*"' "$JACOCO_XML" | grep -oP 'covered="\K[0-9]+' | head -1)
-            BRANCH_MISSED=$(grep -o 'type="BRANCH".*missed="[0-9]*"' "$JACOCO_XML" | grep -oP 'missed="\K[0-9]+' | head -1)
-          
-            # Line coverage
-            LINE_COVERED=$(grep -o 'type="LINE".*covered="[0-9]*"' "$JACOCO_XML" | grep -oP 'covered="\K[0-9]+' | head -1)
-            LINE_MISSED=$(grep -o 'type="LINE".*missed="[0-9]*"' "$JACOCO_XML" | grep -oP 'missed="\K[0-9]+' | head -1)
-          
-            # Yüzdeleri hesapla
-            if [ -n "$INSTRUCTION_COVERED" ] && [ -n "$INSTRUCTION_MISSED" ]; then
-              TOTAL_INST=$((INSTRUCTION_COVERED + INSTRUCTION_MISSED))
-              INST_PCT=$(awk "BEGIN {printf \"%.1f\", ($INSTRUCTION_COVERED/$TOTAL_INST)*100}")
-            else
-              INST_PCT="0.0"
-            fi
-          
-            if [ -n "$BRANCH_COVERED" ] && [ -n "$BRANCH_MISSED" ]; then
-              TOTAL_BRANCH=$((BRANCH_COVERED + BRANCH_MISSED))
-              BRANCH_PCT=$(awk "BEGIN {printf \"%.1f\", ($BRANCH_COVERED/$TOTAL_BRANCH)*100}")
-            else
-              BRANCH_PCT="0.0"
-            fi
-          
-            if [ -n "$LINE_COVERED" ] && [ -n "$LINE_MISSED" ]; then
-              TOTAL_LINE=$((LINE_COVERED + LINE_MISSED))
-              LINE_PCT=$(awk "BEGIN {printf \"%.1f\", ($LINE_COVERED/$TOTAL_LINE)*100}")
-            else
-              LINE_PCT="0.0"
-            fi
+            # Branch coverage: "1 of 14" formatından parse
+            BRANCH_LINE=$(grep -A1 '<tfoot>' "$JACOCO_HTML" | grep 'class="bar"' | sed -n '2p')
+            BRANCH_MISSED=$(echo "$BRANCH_LINE" | grep -oP '\d+(?= of )' || echo "0")
+            BRANCH_TOTAL=$(echo "$BRANCH_LINE" | grep -oP 'of \K\d+' || echo "1")
+            BRANCH_COVERED=$((BRANCH_TOTAL - BRANCH_MISSED))
+            BRANCH_PCT=$(awk "BEGIN {printf \"%.0f\", ($BRANCH_COVERED/$BRANCH_TOTAL)*100}")
           
             # Tablo oluştur
             echo "| Metric | Coverage | Status |" >> $GITHUB_STEP_SUMMARY
             echo "| :--- | :--- | :--- |" >> $GITHUB_STEP_SUMMARY
-            echo "| **Instruction Coverage** | ${INST_PCT}% | $(awk "BEGIN {exit ($INST_PCT >= 80) ? 0 : 1}" && echo "✅" || echo "⚠️") |" >> $GITHUB_STEP_SUMMARY
-            echo "| **Branch Coverage** | ${BRANCH_PCT}% | $(awk "BEGIN {exit ($BRANCH_PCT >= 80) ? 0 : 1}" && echo "✅" || echo "⚠️") |" >> $GITHUB_STEP_SUMMARY
-            echo "| **Line Coverage** | ${LINE_PCT}% | $(awk "BEGIN {exit ($LINE_PCT >= 80) ? 0 : 1}" && echo "✅" || echo "⚠️") |" >> $GITHUB_STEP_SUMMARY
+            echo "| **Instruction Coverage** | ${INST_PCT}% | $([ $INST_PCT -ge 80 ] && echo "✅" || echo "⚠️") |" >> $GITHUB_STEP_SUMMARY
+            echo "| **Branch Coverage** | ${BRANCH_PCT}% | $([ $BRANCH_PCT -ge 80 ] && echo "✅" || echo "⚠️") |" >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
           else
             echo "⚠️ JaCoCo raporu bulunamadı!" >> $GITHUB_STEP_SUMMARY
@@ -103,37 +81,43 @@ jobs:
           name: jacoco-report
           path: target/site/jacoco/
 
-      # 5. PITEST (MUTASYON) VE DİNAMİK VERİ ÇEKME (DÜZELTİLDİ)
+      # 5. PITEST (MUTASYON) VE DİNAMİK VERİ ÇEKME (HTML'DEN DOĞRU PARSE)
       - name: Run PITest and Extract Summary
         run: |
           mvn org.pitest:pitest-maven:mutationCoverage
           
-          # PITest mutations.xml dosyasından doğru verileri çek
-          MUTATIONS_XML="target/pit-reports/mutations.xml"
-          
-          if [ -f "$MUTATIONS_XML" ]; then
-            # XML'den mutation coverage hesapla
-            KILLED=$(grep -o '<status>KILLED</status>' "$MUTATIONS_XML" | wc -l)
-            TOTAL=$(grep -o '<mutation ' "$MUTATIONS_XML" | wc -l)
-          
-            if [ "$TOTAL" -gt 0 ]; then
-              MUT_COV=$(awk "BEGIN {printf \"%.0f\", ($KILLED/$TOTAL)*100}")
-            else
-              MUT_COV="0"
-            fi
-          
-            # Line coverage için index.html'den çek
-            LINE_COV=$(grep -oP 'Total.*?<td>(\d+)%' target/pit-reports/index.html | grep -oP '\d+' | head -1 || echo "0")
-          else
-            MUT_COV="0"
-            LINE_COV="0"
-          fi
+          PITEST_HTML="target/pit-reports/index.html"
           
           echo "### 🧬 Mutation Testing Summary (PITest)" >> $GITHUB_STEP_SUMMARY
-          echo "| Metric | Score | Status |" >> $GITHUB_STEP_SUMMARY
-          echo "| :--- | :--- | :--- |" >> $GITHUB_STEP_SUMMARY
-          echo "| **Mutation Coverage** | ${MUT_COV}% | $([ $MUT_COV -ge 80 ] && echo "✅" || echo "⚠️") |" >> $GITHUB_STEP_SUMMARY
-          echo "| **Line Coverage** | ${LINE_COV}% | ✅ |" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          
+          if [ -f "$PITEST_HTML" ]; then
+            # Line Coverage: 98% <div class="coverage_bar">...58/59</div>
+            LINE_COV=$(grep -A2 '<th>Line Coverage</th>' "$PITEST_HTML" | grep -oP '(?<=width-)\d+' | head -1)
+            LINE_RATIO=$(grep -A2 '<th>Line Coverage</th>' "$PITEST_HTML" | grep -oP '\d+/\d+' | head -1)
+          
+            # Mutation Coverage: 83% <div class="coverage_bar">...34/41</div>
+            MUT_COV=$(grep -A2 '<th>Mutation Coverage</th>' "$PITEST_HTML" | grep -oP '(?<=width-)\d+' | head -1)
+            MUT_RATIO=$(grep -A2 '<th>Mutation Coverage</th>' "$PITEST_HTML" | grep -oP '\d+/\d+' | head -1)
+          
+            # Test Strength: 92% <div class="coverage_bar">...34/37</div>
+            TEST_STR=$(grep -A2 '<th>Test Strength</th>' "$PITEST_HTML" | grep -oP '(?<=width-)\d+' | head -1)
+            TEST_RATIO=$(grep -A2 '<th>Test Strength</th>' "$PITEST_HTML" | grep -oP '\d+/\d+' | head -1)
+          
+            # Varsayılan değerler (parse başarısız olursa)
+            LINE_COV=${LINE_COV:-0}
+            MUT_COV=${MUT_COV:-0}
+            TEST_STR=${TEST_STR:-0}
+          
+            echo "| Metric | Score | Status |" >> $GITHUB_STEP_SUMMARY
+            echo "| :--- | :--- | :--- |" >> $GITHUB_STEP_SUMMARY
+            echo "| **Line Coverage** | ${LINE_COV}% (${LINE_RATIO}) | $([ $LINE_COV -ge 80 ] && echo "✅" || echo "⚠️") |" >> $GITHUB_STEP_SUMMARY
+            echo "| **Mutation Coverage** | ${MUT_COV}% (${MUT_RATIO}) | $([ $MUT_COV -ge 80 ] && echo "✅" || echo "⚠️") |" >> $GITHUB_STEP_SUMMARY
+            echo "| **Test Strength** | ${TEST_STR}% (${TEST_RATIO}) | $([ $TEST_STR -ge 80 ] && echo "✅" || echo "⚠️") |" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "⚠️ PITest raporu bulunamadı!" >> $GITHUB_STEP_SUMMARY
+          fi
 
       # 6. PITEST RAPORUNU YÜKLE
       - name: Upload PITest Report
@@ -165,7 +149,7 @@ jobs:
           newman run tests/postman/collection.json --reporter-cli-no-banner >> $GITHUB_STEP_SUMMARY
           echo '```' >> $GITHUB_STEP_SUMMARY
 
-      # 9. PERFORMANS TESTLERİ (k6 TAM ÇIKTI - DÜZELTİLDİ)
+      # 9. PERFORMANS TESTLERİ (k6 TAM ÇIKTI)
       - name: Setup k6
         uses: grafana/setup-k6-action@v1
 
@@ -173,7 +157,6 @@ jobs:
         run: |
           echo "### ⚡ Performance Summary (k6)" >> $GITHUB_STEP_SUMMARY
           echo '```text' >> $GITHUB_STEP_SUMMARY
-          # k6 çıktısını doğrudan summary'e yaz (tüm çıktı)
           k6 run tests/k6/load_test.js >> $GITHUB_STEP_SUMMARY 2>&1 || true
           echo '```' >> $GITHUB_STEP_SUMMARY
 
