--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -50,18 +50,29 @@ jobs:
           
           if [ -f "$JACOCO_HTML" ]; then
             # Instruction coverage: "26 of 296" formatından parse
-            INST_LINE=$(grep -A1 '<tfoot>' "$JACOCO_HTML" | grep 'class="bar"' | head -1)
-            INST_MISSED=$(echo "$INST_LINE" | grep -oP '\d+(?= of )' || echo "0")
-            INST_TOTAL=$(echo "$INST_LINE" | grep -oP 'of \K\d+' || echo "1")
-            INST_COVERED=$((INST_TOTAL - INST_MISSED))
-            INST_PCT=$(awk "BEGIN {printf \"%.0f\", ($INST_COVERED/$INST_TOTAL)*100}")
+            INST_DATA=$(grep '<tfoot>' -A 5 "$JACOCO_HTML" | grep 'class="bar"' | head -1 | grep -oP '\d+ of \d+')
+            INST_MISSED=$(echo "$INST_DATA" | cut -d' ' -f1)
+            INST_TOTAL=$(echo "$INST_DATA" | cut -d' ' -f3)
           
-            # Branch coverage: "1 of 14" formatından parse
-            BRANCH_LINE=$(grep -A1 '<tfoot>' "$JACOCO_HTML" | grep 'class="bar"' | sed -n '2p')
-            BRANCH_MISSED=$(echo "$BRANCH_LINE" | grep -oP '\d+(?= of )' || echo "0")
-            BRANCH_TOTAL=$(echo "$BRANCH_LINE" | grep -oP 'of \K\d+' || echo "1")
-            BRANCH_COVERED=$((BRANCH_TOTAL - BRANCH_MISSED))
-            BRANCH_PCT=$(awk "BEGIN {printf \"%.0f\", ($BRANCH_COVERED/$BRANCH_TOTAL)*100}")
+            # Branch coverage: "1 of 14" formatından parse  
+            BRANCH_DATA=$(grep '<tfoot>' -A 5 "$JACOCO_HTML" | grep 'class="bar"' | sed -n '2p' | grep -oP '\d+ of \d+')
+            BRANCH_MISSED=$(echo "$BRANCH_DATA" | cut -d' ' -f1)
+            BRANCH_TOTAL=$(echo "$BRANCH_DATA" | cut -d' ' -f3)
+          
+            # Güvenli hesaplama (boş değer kontrolü)
+            if [ -n "$INST_TOTAL" ] && [ "$INST_TOTAL" -gt 0 ]; then
+              INST_COVERED=$((INST_TOTAL - INST_MISSED))
+              INST_PCT=$(awk "BEGIN {printf \"%.0f\", ($INST_COVERED/$INST_TOTAL)*100}")
+            else
+              INST_PCT="0"
+            fi
+          
+            if [ -n "$BRANCH_TOTAL" ] && [ "$BRANCH_TOTAL" -gt 0 ]; then
+              BRANCH_COVERED=$((BRANCH_TOTAL - BRANCH_MISSED))
+              BRANCH_PCT=$(awk "BEGIN {printf \"%.0f\", ($BRANCH_COVERED/$BRANCH_TOTAL)*100}")
+            else
+              BRANCH_PCT="0"
+            fi
           
             # Tablo oluştur
             echo "| Metric | Coverage | Status |" >> $GITHUB_STEP_SUMMARY
